fixed footer on small screens

--- a/index.css
+++ b/index.css
@@ -63,7 +63,6 @@ svg {
 }
 
 footer {
-    position: fixed;
     text-align: center;
     width: 100%;
     bottom: 0;
